<resources>
    <string name="app_name">My Application</string>

    <string name="hint_username">Your username goes here.</string>
    <string name="hint_password">Your password goes here.</string>

    <string name="error_invalid_credentials">Invalid credentials</string>

    <string name="action_save_credentials">Save credentials</string>
    <string name="error_credentials_empty_password">Your password is empty</string>
    <string name="error_credentials_empty_username">Your username is empty </string>
    <string name="error_credentials_mismatch">Invalid username and/or password</string>
    <string name="action_login">Authenticate</string>

    <string name="welcome">Welcome</string>
    <string name="click_me">Click Me</string>
    <string name= "open_camera">Open Camera</string>
    <string name="open_details">Open Details</string>
    <string name="open_list">Open List</string>
    <string name="details">Details</string>

    <string name="time_remaining">Remaining %d seconds</string>
    <string name="time_done">Finished!</string>
    <string name="show_dialog">Show dialog</string>
    <string name="show_snackbar">Show snackbar</string>
    <string name="start_timer">Start</string>
    <string name="dialog_title" >Good</string>
    <string name="dialog_message" >Nice course</string>
    <string name="dialog_action_ok" >OK</string>
    <string name="dialog_action_ok_selected">Selected OK</string>
    <string name="dialog_action_cancel">Cancel</string>

    <string name="about">About</string>
    <string name="about_copyright">Copyright © 2020\nAndroid Training Program, Portugal</string>
    <string name="about_website">Website</string>
    <string name="about_youtube">YouTube Channel</string>
    <string name="about_email">E-mail</string>

    <string name="about_share">Share</string>
    <string name="about_twitter">Twitter</string>

    <string name="about_authors">Authors</string>
    <string name="about_almo">\@davilagrau</string>
    <string name="about_cafonsomota">\@cafonsomota</string>
    <string name="about_tallnato">\@tallnato</string>

    <string name="about_libraries">Libraries</string>
    <string name="about_android">Android</string>
    <string name="about_retrofit"><a href="https://github.com/square/retrofit">Retrofit</a></string>
    <string name="about_glide"><a href="https://github.com/bumptech/glide">glide</a></string>
    <string name="about_icons8">icons8</string>

    <string name="description_logo">Application logo</string>

    <string name="snackbar_message">What a beauty</string>
    <string name="snackbar_action_thanks">Thank you</string>
    <string name="snackbar_action_thanks_selected">You selected Thank you!</string>
    <string name="evora">Evora</string>
    <string name="_0">0</string>

    <string name="main_menu_home">Home</string>
    <string name="main_menu_breeds">Breeds</string>
    <string name="main_menu_favourites">Favourites</string>
    <string name="main_menu_about">About</string>
    <string name="description_image">Image</string>
</resources>