<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:gravity="center"
    android:padding="16dp">
    
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src = "@drawable/ic_launcher_foreground"
        android:contentDescription="@string/description_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_invalid_credentials"
        android:visibility="invisible"
        android:textColor = "@android:color/holo_red_dark"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_save_credentials" />

    <Button
        android:id="@+id/btn_auth"
        android:layout_width="wrap_content"
        android:minWidth="300dp"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:textColor = "@color/purple_700"
        android:textStyle = "bold"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"/>

</LinearLayout>